[gd_scene load_steps=11 format=2]

[ext_resource path="res://Bingus Assets/graphics/bingusgameintro.png" type="Texture" id=1]
[ext_resource path="res://Intro/Intro.gd" type="Script" id=2]
[ext_resource path="res://Bingus Assets/sounds/bingus intro.wav" type="AudioStream" id=3]
[ext_resource path="res://Intro/TextIntro2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Intro/TextIntro1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Intro/TextIntro3.tscn" type="PackedScene" id=6]
[ext_resource path="res://Intro/TextIntro5.tscn" type="PackedScene" id=7]
[ext_resource path="res://Intro/TextIntro4.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fades/Fadeout.tscn" type="PackedScene" id=9]
[ext_resource path="res://Fades/Fadein.tscn" type="PackedScene" id=10]

[node name="Intro" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
margin_bottom = -2.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )

[node name="TextIntro1" parent="." instance=ExtResource( 5 )]
position = Vector2( 440, 80 )

[node name="TextIntro2" parent="." instance=ExtResource( 4 )]
position = Vector2( 440, 180 )

[node name="TextIntro3" parent="." instance=ExtResource( 6 )]
position = Vector2( 440, 280 )

[node name="TextIntro4" parent="." instance=ExtResource( 8 )]
position = Vector2( 440, 380 )

[node name="TextIntro5" parent="." instance=ExtResource( 7 )]
position = Vector2( 440, 480 )

[node name="BingusIntroMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="Tween" type="Tween" parent="."]

[node name="IntroTimer" type="Timer" parent="."]
wait_time = 11.0
one_shot = true
autostart = true

[node name="Fadeout" parent="." instance=ExtResource( 9 )]

[node name="Fadein" parent="." instance=ExtResource( 10 )]

[connection signal="timeout" from="IntroTimer" to="." method="_on_IntroTimer_timeout"]
